# NHL-Jaar-2-Machine-Intelligence

./: .gitignore  CMakeLists.txt  Magnetron.asta  Magnetron.mdj  README.md  conanfile.txt
Algoritmiek/: CMakeLists.txt  Week1.cpp
Algoritmiek/Week 1/: CMakeLists.txt  main.cpp
Concurrency/: CMakeLists.txt  Concurrency_Week1.cpp  Race_condition.cpp  Week1.cpp  main.cpp
Concurrency/Race_condition/: Race_condition.cpp
Concurrency/Week 1/: CMakeLists.txt
Concurrency/Week 2/: CMakeLists.txt  main.cpp  test.cpp
Concurrency/Week 4/: CMakeLists.txt  GIS_TRI.cpp  GIS_TRI.h  main.cpp  test.cpp
OOP/: CMakeLists.txt  Opdracht_Week_1.cpp  bogo.cpp
OOP/Week 1/: CMakeLists.txt
OOP/Week 2/: CMakeLists.txt  main.cpp  math2000.cpp  math2000.h  test.cpp
OOP/Week 3/: CMakeLists.txt  Calculator.cpp  Calculator.h  Math2000.cpp  main.cpp  test.cpp
OOP/Week 4/: CMakeLists.txt  main.cpp
Threadpool/: Concurrency_Threadpool.cpp  ThreadPool.h
